--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+html{
+  height: 100%;
+}
 body {
-  font-family: Microsoft YaHei,Avenir, Helvetica, Arial, sans-serif !important;
+  height: 98%;
+  font-family: Microsoft YaHei,Avenir, Helvetica, Arial, sans-serif !important;font-size: 14px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center1;
