--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ button, input, select, textarea,pre {
   height:100%;
 }
 
-*, ::before, ::after{
+#ideDesigner *, ::before, ::after{
   box-sizing: content-box !important;
 }
 
